finished article controller
